# car-brand-detector-trainig

./: .gitignore  pyproject.toml
outputs/training_results/: fine-tuning_results_vit_car_50e_unfreeze-4.npy  results_vit_car_50e_unfreeze-2.npy
src/: data_setup.py  engine.py  eval.py  pred.py  train.py  utils.py
src/models/: inference.py
