[tool.poetry]
name = "image-classification"
version = "0.0.1"
authors = ["vova <vovam207@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
seaborn = "^0.13.2"
scikit-learn = ">=0.24,<1.5.0"
torch = {version = "^2.6.0+cu118", source = "pytorch"}
torchvision = {version = "^0.21.0+cu118", source = "pytorch"}
numpy = ">=1.22.4,<=2"
pandas = ">=2.1,<=2.2"
matplotlib = ">=3.7.5,<=3.8"
torchinfo = "^1.8.0"
tensorboard = "^2.20.0"
notebook = "^7.4.5"
torchmetrics = "^1.8.1"
tqdm = "^4.67.1"
transformers = "^4.55.3"
hf-xet = "^1.1.8"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
